<?xml version="1.0" encoding="utf-8"?>
<!-- @author: Paul Welch -->
<!-- Define the string variables for objects. -->
<resources>
    <string name="app_name">Bite-Byte</string>
    <string name="main_title">Main Menu</string>
    <string name="tip_title">Tip Calculator</string>
  	<string name="find_label">Find Restaurant</string>
  	<string name="tip_label">Tip Calculator</string>
    <string name="about_label">About</string>
    <string name="exit_label">Exit</string>
    <string name="about_title">About Bite-Byte</string>
    <string name="about_text">
    Bite-Byte is an application that finds restaurants based
    on the current location of the user which is obtained by using
    the GPS coordinates provided by the Android device and the Google Places JavaScript API.
    This program was written by Paul Welch to meet the requirements
    of CIS5080.
    pwelch2010@my.fit.edu
    </string>
    <string name="tip_text">Tip Percent:</string>
    <string name="amount_text">Tip Amount:</string>
    <string name="total_text">Total Amount:</string>
    <string name="bill_hint">Enter Bill Amount</string>
</resources>