<ScrollView
   xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="fill_parent"
   android:layout_height="fill_parent">
   <TableLayout
      android:layout_width="fill_parent"
      android:layout_height="fill_parent"
      android:stretchColumns="1"
      android:padding="10dip">
       <TextView  
    	android:layout_width="fill_parent" 
    	android:layout_height="wrap_content"
    	android:gravity="center" 
    	android:text="@string/tip_title"/>
      <TableRow>
         <TextView android:text="@string/tip_text" />
         <Spinner android:id="@+id/tip_rate" />
      </TableRow>
      <TableRow>
         <TextView android:text="@string/amount_text" />
      </TableRow>
      <TextView
         android:id="@+id/amountAnswer_text"
         android:padding="10dip"
         android:textSize="18sp" />
      <EditText 
      	 	android:layout_width="wrap_content"
			android:id="@+id/bill_text" 
			android:layout_height="wrap_content" 
			android:text="Enter Bill Amount" 
			android:textSize="18sp" 
			android:hint="@string/bill_hint" 
			android:padding="10dip"
			android:numeric="integer|decimal">
	  </EditText>
      <Button 
      		android:text="Calculate Tip" 
      		android:id="@+id/tipCalculate" 
      		android:layout_width="wrap_content" 
      		android:layout_height="wrap_content"></Button>
   </TableLayout>
</ScrollView>