<?xml version="1.0" encoding="utf-8"?>

<!-- This file defines the layout for the objects in the Main Activity -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
	<TextView  
    	android:layout_width="fill_parent" 
    	android:layout_height="wrap_content"
    	android:gravity="center" 
    	android:text="@string/main_title"/>
    
   <Button
    	android:id="@+id/about_button"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:text="@string/about_label"/>
   <Button 
   		android:text="@string/exit_label" 
   		android:layout_width="fill_parent" 
   		android:id="@+id/exit_button" 
   		android:layout_height="wrap_content">
   	</Button>
</LinearLayout>
